@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH NEUBOT 1 "2013-04-23" "Neubot 0.4.16.7" "Neubot manual"
+.TH NEUBOT 1 "2013-04-23" "Neubot 0.4.16.8" "Neubot manual"
 .SH NAME
 neubot \- The network neutrality bot
 .
